--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 
     .nav-container {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      gap: 250px;
+      width: 90%;
+      max-width: 1100px;
+      margin: auto;
+
     }
 
 
@@ -67,7 +71,6 @@
       display: flex;
       flex-direction: column;
       cursor: pointer;
-      margin-left: auto;
       z-index: 1001;
     }
 
@@ -548,7 +551,7 @@
       <img src="img/logo.png" alt="Taj Homes Logo" class="logo-img" />
       Taj Homes</h1>
 
-    <!-- ✅ Desktop nav links -->
+    <!--  Desktop nav links -->
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
@@ -556,7 +559,7 @@
       <li class="push-right"><a href="#contact">Contact</a></li>
     </ul>
 
-    <!-- ✅ Hamburger for small screens -->
+    <!--  Hamburger for small screens -->
     <div class="hamburger" id="hamburger">
       <div></div>
       <div></div>
