--- a/build.html
+++ b/build.html
@@ -303,7 +303,7 @@
   </div>
   <div class="contact-item">
     <h3>Phone</h3>
-    <p><a href="tel:3065551234">(306) 555-1234</a></p>
+    <p><a href="tel:(306) 880-9555">(306) 880-9555</a></p>
   </div>
   <div class="contact-item">
     <h3>Email</h3>
@@ -311,9 +311,9 @@
   </div>
 </section>
 <div class="social-icons">
-  <a href="tel:3065551234" aria-label="Call us"><i class="fas fa-phone"></i></a>
+  <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
   <a href="mailto:info@tajhomes.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
-  <a href="https://www.instagram.com/yourtajhandle" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 <footer>
   <div class="container">
