Adding more details for the nav

--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
   </div>
 </section>
 <!-- Contact Info Section -->
-<section class="contact-info">
+<section id="contact" class="contact-info">
   <div class="container contact-grid">
     <div class="contact-item">
       <h3>Address</h3>
