added more features for the nav section

--- a/index.html
+++ b/index.html
@@ -608,14 +608,14 @@
 </section>
 
 
-<section class="work-banner">
+<section id="projects" class="work-banner">
   <div class="work-overlay">
     <a href="#projects" class="work-btn">Some of our work</a>
   </div>
 </section>
 
 
-<section class="how-it-works">
+<section id="about" class="how-it-works">
   <div class="container">
     <h2>How Taj Homes Works</h2>
     <div class="underline"></div>
