making new changes for jay

--- a/build.html
+++ b/build.html
@@ -295,7 +295,7 @@
 <section class="contact-info">
   <div class="contact-item">
     <h3>Address</h3>
-    <p>123 Main Street<br>Saskatoon, SK</p>
+    <p>728 Weir Cres<br>Warman, SK</p>
   </div>
   <div class="contact-item">
     <h3>Hours</h3>
