--- a/index.html
+++ b/index.html
@@ -151,13 +151,19 @@
     }
 
     .hero {
-      background-image: url('img/image2.png');
+      background-image: url('img/main-picture.png');
       background-size: cover;
       background-position: center;
       height: 500px;
       text-align: center;
       color: white;
       position: relative;
+    }
+
+    .hero-image {
+      width : 100%;
+      height : auto;
+      display:  block;
     }
 
     .hero .overlay {
@@ -668,7 +674,7 @@
   <div class="container contact-grid">
     <div class="contact-item">
       <h3>Address</h3>
-      <p>123 Main Street<br>Saskatoon, SK</p>
+      <p>728 Weir Cres<br>Warman, SK</p>
     </div>
     <div class="contact-item">
       <h3>Hours</h3>
@@ -683,6 +689,10 @@
       <p><a href="mailto:info@tajhomes.com">info@tajhomes.com</a></p>
     </div>
   </div>
+</section>
+
+<section class="hero">
+  <img src="img/main-picture.png" class="hero-image" />
 </section>
 
 <!-- Social Icons -->
