--- a/renovate.html
+++ b/renovate.html
@@ -425,7 +425,7 @@
 
 <section class="how-renovation-works">
   <div class="container">
-    <h2>Your renovation starts right here.</h2>
+
     <p class="intro-text">
       It’s pretty simple. You need a fresh space to live, cook and make memories.
       We can help you design and renovate your existing home to make it more functional
@@ -482,7 +482,7 @@
   <div class="contact-grid">
     <div class="contact-item">
       <h3>Address</h3>
-      <p>123 Main Street<br>Saskatoon, SK</p>
+      <p>728 Weir Cres<br>Warman, SK</p>
     </div>
     <div class="contact-item">
       <h3>Hours</h3>
