Fixed the bug that was overwritting

--- a/index.html
+++ b/index.html
@@ -160,11 +160,7 @@
       position: relative;
     }
 
-    .hero-image {
-      width : 100%;
-      height : auto;
-      display:  block;
-    }
+
 
     .hero .overlay {
       background-color: rgba(0, 0, 0, 0.4); /* dark overlay for text visibility */
@@ -593,12 +589,7 @@
 
 <section id="home" class="hero">
   <div class="container hero-content">
-    <h2>Welcome to Taj Homes</h2>
-    <p class="tagline">Modern living spaces designed with care and built to last.</p>
-    <div class="hero-buttons">
-      <a href="renovate.html" class="hero-btn">I want to renovate</a>
-      <a href="build.html" class="hero-btn secondary">I want to build new</a>
-    </div>
+    <h1>Designed for living, built with care</h1>
   </div>
 </section>
 
@@ -691,9 +682,7 @@
   </div>
 </section>
 
-<section class="hero">
-  <img src="img/main-picture.png" class="hero-image" />
-</section>
+
 
 <!-- Social Icons -->
 <div class="social-icons">
