Made more changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="icon" type="image/png" href="img/logo.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Taj Homes</title>
@@ -167,10 +169,18 @@
       padding: 100px 0;
     }
     .hero-content {
-      padding-top: 100px; /*  adjust  to push text lower */
+      padding-top: 200px; /*  adjust  to push text lower */
       text-align: center;
     }
 
+
+    .hero-content h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 35px;
+      font-weight: 400; /* or 700 for bold */
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
 
     .about, .projects, .contact {
       padding: 60px 0;
@@ -241,10 +251,12 @@
     }
 
     .slogan-content h2 {
-      font-size: 28px;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 28px; /* optional: increase font size if you want */
       margin-bottom: 30px;
       color: #2b2b2b;
     }
+
 
     .slogan-content .hero-buttons {
       display: flex;
@@ -595,7 +607,7 @@
 
 <section class="slogan-section">
   <div class="container slogan-content">
-    <h2>Designed for living, built with care</h2>
+    <h2>At Taj Homes, we build more than houses - we build your vision. Fast, modern, and within budget, every home is crafted with care </h2>
     <div class="slogan-underline"></div>
     <div class="hero-buttons">
       <a href="renovate.html" class="hero-btn">I want to renovate</a>
@@ -677,7 +689,7 @@
     </div>
     <div class="contact-item">
       <h3>Email</h3>
-      <p><a href="mailto:info@tajhomes.com">info@tajhomes.com</a></p>
+      <p><a href="Tajhomessk@yahoo.com">Tajhomessk@yahoo.com</a></p>
     </div>
   </div>
 </section>
@@ -687,7 +699,7 @@
 <!-- Social Icons -->
 <div class="social-icons">
   <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
-  <a href="mailto:info@tajhomes.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
+  <a href="Tajhomessk@yahoo.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
   <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 
