--- a/renovate.html
+++ b/renovate.html
@@ -494,13 +494,13 @@
     </div>
     <div class="contact-item">
       <h3>Email</h3>
-      <p><a href="mailto:info@tajhomes.com">info@tajhomes.com</a></p>
+      <p><a href="Tajhomessk@yahoo.com">Tajhomessk@yahoo.com</a></p>
     </div>
   </div>
 </section>
 <div class="social-icons">
   <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
-  <a href="mailto:info@tajhomes.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
+  <a href="Tajhomessk@yahoo.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
   <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 <footer>
