--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       background-image: url('img/main-picture.png');
       background-size: cover;
       background-position: center;
-      height: 500px;
+      height: 100vh;
       text-align: center;
       color: white;
       position: relative;
