--- a/index.html
+++ b/index.html
@@ -153,20 +153,24 @@
     }
 
     .hero {
+      position: relative;
       background-image: url('img/main-picture.png');
       background-size: cover;
       background-position: center;
-      height: 100%;
+      height: 65vh; /* Full screen height */
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-align: center;
       color: white;
-      position: relative;
     }
 
 
 
 
+
     .hero-content {
-      padding-top: 400px; /*  adjust  to push text lower */
+
       text-align: center;
     }
 
