Added a our work section

--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
 <section id="projects" class="work-banner">
   <div class="work-overlay">
-    <a href="#projects" class="work-btn">Some of our work</a>
+    <a href="our-work.html" class="work-btn">Some of our work</a>
   </div>
 </section>
 
