Fixed some sizing and pictures

--- a/build.html
+++ b/build.html
@@ -142,8 +142,8 @@
     }
     label {
       font-weight: 500;
-      margin-top: 20px;
-      margin-bottom: 5px;
+      margin-top: 10px;
+      margin-bottom: 2px;
       font-size: 14px;
       text-transform: uppercase;
       letter-spacing: 0.5px;
@@ -259,11 +259,13 @@
     <p>
       Tell us a little about what you are looking for in a home. We’ll be in touch with some next steps to start planning a build that fits your needs.
     </p>
-    <img src="img/build.png" alt="Build Image" style="width: 100%; height: 300px; margin-top: 20px; border-radius: 20px;" />
+    <img src="img/project4.png" alt="Build Image" style="width: 100%; height: 300px; margin-top: 20px; border-radius: 20px;" />
   </div>
 
   <div class="form-section">
-    <form action="https://formsubmit.co/your@email.com" method="POST">
+    <form action="https://formsubmit.co/wxp920@usask.ca" method="POST">
+
+
       <label>Name</label>
       <div class="name-fields">
         <input type="text" name="first_name" placeholder="First Name" required>
@@ -290,6 +292,8 @@
       <button type="submit">Submit</button>
     </form>
   </div>
+
+
 </div>
 
 <section class="contact-info">
@@ -307,12 +311,12 @@
   </div>
   <div class="contact-item">
     <h3>Email</h3>
-    <p><a href="Tajhomessk@yahoo.com">Tajhomessk@yahoo.com</a></p>
+    <p><a href="">Tajhomessk@yahoo.com</a></p>
   </div>
 </section>
 <div class="social-icons">
   <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
-  <a href="Tajhomessk@yahoo.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
+  <a href="" aria-label="Email us"><i class="fas fa-envelope"></i></a>
   <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 <footer>
