--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
     </div>
     <div class="contact-item">
       <h3>Email</h3>
-      <p><a href="Tajhomessk@yahoo.com">Tajhomessk@yahoo.com</a></p>
+      <p><a href="">Tajhomessk@yahoo.com</a></p>
     </div>
   </div>
 </section>
@@ -700,7 +700,7 @@
 <!-- Social Icons -->
 <div class="social-icons">
   <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
-  <a href="Tajhomessk@yahoo.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
+  <a href="" aria-label="Email us"><i class="fas fa-envelope"></i></a>
   <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 
