--- a/our-work.html
+++ b/our-work.html
@@ -191,6 +191,30 @@
       font-size: 16px;
       font-weight: 500;
     }
+
+    .contact-info, .social-icons, footer {
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 30px 20px;
+    }
+    .contact-info {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      gap: 30px;
+    }
+    .contact-info a {
+      color : #2b2b2b;
+      text-decoration: none;
+    }
+    .contact-item h3 {
+      margin-bottom: 10px;
+    }
+    .social-icons a {
+      color: #2b2b2b;
+      font-size: 24px;
+      margin: 0 15px;
+    }
   </style>
 </head>
 <body>
@@ -241,6 +265,29 @@
   </section>
 </div>
 
+<section class="contact-info">
+  <div class="contact-item">
+    <h3>Address</h3>
+    <p>728 Weir Cres<br>Warman, SK</p>
+  </div>
+  <div class="contact-item">
+    <h3>Hours</h3>
+    <p>Mon–Fri: 9am – 5pm<br>Sat–Sun: Closed</p>
+  </div>
+  <div class="contact-item">
+    <h3>Phone</h3>
+    <p><a href="tel:(306) 880-9555">(306) 880-9555</a></p>
+  </div>
+  <div class="contact-item">
+    <h3>Email</h3>
+    <p><a href="Tajhomessk@yahoo.com">Tajhomessk@yahoo.com</a></p>
+  </div>
+</section>
+<div class="social-icons">
+  <a href="tel:(306) 880-9555" aria-label="Call us"><i class="fas fa-phone"></i></a>
+  <a href="Tajhomessk@yahoo.com" aria-label="Email us"><i class="fas fa-envelope"></i></a>
+  <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+</div>
 <footer>
   <div class="container">
     <p>&copy; 2025 Taj Homes. All rights reserved.</p>
