took off the captions for the our-work.html

--- a/our-work.html
+++ b/our-work.html
@@ -247,21 +247,21 @@
 
 <div id="main-content">
   <section class="gallery">
-    <div class="gallery-item"><img src="img/project1.png" alt="Project 1"><div class="caption">Modern Kitchen</div></div>
-    <div class="gallery-item"><img src="img/project2.png" alt="Project 2"><div class="caption">Living Room</div></div>
-    <div class="gallery-item"><img src="img/project3.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project4.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project5.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project6.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project7.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project8.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project9.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project10.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project11.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project12.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project13.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project14.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
-    <div class="gallery-item"><img src="img/project15.png" alt="Project 3"><div class="caption">Bathroom Design</div></div>
+    <div class="gallery-item"><img src="img/project1.png" alt="Project 1"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project2.png" alt="Project 2"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project3.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project4.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project5.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project6.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project7.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project8.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project9.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project10.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project11.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project12.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project13.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project14.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project15.png" alt="Project 3"><div class="caption"></div></div>
   </section>
 </div>
 
