--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       background-image: url('img/main-picture.png');
       background-size: cover;
       background-position: center;
-      height: 65vh; /* Full screen height */
+      height: 58:wqvh; /* Full screen height */
       display: flex;
       justify-content: center;
       align-items: center;
@@ -166,13 +166,21 @@
     }
 
 
-
-
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.4); /* soft black overlay */
+      z-index: 1;
+    }
 
     .hero-content {
-
+      position: relative;
+      z-index: 2; /* make sure content is above the overlay */
       text-align: center;
+      padding: 0 20px;
     }
+
 
 
     .hero-content h1 {
