--- a/build.html
+++ b/build.html
@@ -263,7 +263,9 @@
   </div>
 
   <div class="form-section">
-    <form action="https://formsubmit.co/wxp920@usask.ca" method="POST">
+    <form action="https://formsubmit.co/mackbriand@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://taj-homes.netlify.app/thankyou.html" >
+      <input type="hidden" name="form_type" value="Build Inquiry" />
 
 
       <label>Name</label>
