--- a/renovate.html
+++ b/renovate.html
@@ -461,6 +461,7 @@
 
   <div class="form-section">
     <form action="https://formsubmit.co/mackbriand@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://taj-homes.netlify.app/thankyou.html" >
       <input type="hidden" name="form_type" value="Renovation Inquiry" />
       <label>Name <span style="font-size:12px">(required)</span></label>
       <div class="name-fields">
