--- a/renovate.html
+++ b/renovate.html
@@ -378,6 +378,31 @@
       object-fit: cover;
     }
 
+    .footer-flex {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .footer-logo {
+      max-width: 100px;
+      height: auto;
+    }
+
+    @media (max-width: 600px) {
+      .footer-flex {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .footer-logo {
+        max-width: 80px;
+        margin-bottom: 10px;
+      }
+    }
+
   </style>
 </head>
 <body>
@@ -506,7 +531,8 @@
   <a href="https://www.instagram.com/tajhomes_yxe/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
 </div>
 <footer>
-  <div class="container">
+  <div class="container footer-flex">
+    <img src="img/new.png" alt="New Footer Image" class="footer-logo" />
     <p>&copy; 2025 Taj Homes. All rights reserved.</p>
   </div>
 </footer>
