Switched domains, and added new email to the formsubmit

--- a/renovate.html
+++ b/renovate.html
@@ -485,8 +485,8 @@
   </div>
 
   <div class="form-section">
-    <form action="https://formsubmit.co/mackbriand@gmail.com" method="POST">
-      <input type="hidden" name="_next" value="https://taj-homes.netlify.app/thankyou.html" >
+    <form action="https://formsubmit.co/Tajhomessk@yahoo.com" method="POST">
+      <input type="hidden" name="_next" value="https://taj-homes.ca/thankyou.html" >
       <input type="hidden" name="form_type" value="Renovation Inquiry" />
       <label>Name <span style="font-size:12px">(required)</span></label>
       <div class="name-fields">
