--- a/build.html
+++ b/build.html
@@ -288,8 +288,8 @@
   </div>
 
   <div class="form-section">
-    <form action="https://formsubmit.co/mackbriand@gmail.com" method="POST">
-      <input type="hidden" name="_next" value="https://taj-homes.netlify.app/thankyou.html" >
+    <form action="https://formsubmit.co/Tajhomessk@yahoo.com" method="POST">
+      <input type="hidden" name="_next" value="https://taj-homes.ca/thankyou.html" >
       <input type="hidden" name="form_type" value="Build Inquiry" />
 
 
