Fixed the problem with the video on the hero section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     .hero {
       position: relative;
-      background-image: url('video/intro-video.mp4');
+
       background-size: cover;
       background-position: center;
       height: 51vh; /* Full screen height */
@@ -764,7 +764,7 @@
 <!-- Footer -->
 <footer>
   <div class="container footer-flex">
-    <img src="img/new.png" alt="New Footer Image" class="footer-logo" />
+    <img src="img/new1.png" alt="New Footer Image" class="footer-logo" />
     <p>&copy; 2025 Taj Homes. All rights reserved.</p>
   </div>
 </footer>
