--- a/our-work.html
+++ b/our-work.html
@@ -287,6 +287,9 @@
     <div class="gallery-item"><img src="img/project13.png" alt="Project 3"><div class="caption"></div></div>
     <div class="gallery-item"><img src="img/project14.png" alt="Project 3"><div class="caption"></div></div>
     <div class="gallery-item"><img src="img/project15.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project16.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project17.png" alt="Project 3"><div class="caption"></div></div>
+    <div class="gallery-item"><img src="img/project18.png" alt="Project 3"><div class="caption"></div></div>
   </section>
 </div>
 
@@ -315,7 +318,7 @@
 </div>
 <footer>
   <div class="container footer-flex">
-    <img src="img/new.png" alt="New Footer Image" class="footer-logo" />
+    <img src="img/new1.png" alt="New Footer Image" class="footer-logo" />
     <p>&copy; 2025 Taj Homes. All rights reserved.</p>
   </div>
 </footer>
