--- a/renovate.html
+++ b/renovate.html
@@ -532,7 +532,7 @@
 </div>
 <footer>
   <div class="container footer-flex">
-    <img src="img/new.png" alt="New Footer Image" class="footer-logo" />
+    <img src="img/new1.png" alt="New Footer Image" class="footer-logo" />
     <p>&copy; 2025 Taj Homes. All rights reserved.</p>
   </div>
 </footer>
