Made more changes

--- a/build.html
+++ b/build.html
@@ -282,9 +282,9 @@
 <div class="form-wrapper">
   <div class="form-text">
     <p>
-      Tell us a little about what you are looking for in a home. We’ll be in touch with some next steps to start planning a build that fits your needs.
+      Tell us a little about what you are looking for in a home. We’ll be in touch with some next steps to start planning a build that fits your needs. Custom Homes takes 4-6 homes.
     </p>
-    <img src="img/project4.png" alt="Build Image" style="width: 100%; height: 300px; margin-top: 20px; border-radius: 20px;" />
+    <img src="img/builder.png" alt="Build Image" style="width: 100%; height: 300px; margin-top: 20px; border-radius: 20px;" />
   </div>
 
   <div class="form-section">
