--- a/renovate.html
+++ b/renovate.html
@@ -459,17 +459,17 @@
 
     <div class="steps">
       <div class="step">
-        <img src="img/Meet.png" alt="Meet" />
+        <img src="img/meeter.png" alt="Meet" />
         <h3>MEET</h3>
         <p>We’ll set up a time to sit down with you and listen to your needs and wants. Then we can talk through some solutions to help you create a space that meets those needs and suits your style.</p>
       </div>
       <div class="step">
-        <img src="img/Design.png" alt="Design" />
+        <img src="img/designer.png" alt="Design" />
         <h3>DESIGN</h3>
         <p>Our design team will provide you with a detailed design proposal. We’ll review everything from design details to the construction timeline and budget.</p>
       </div>
       <div class="step">
-        <img src="img/Renovate.png" alt="Renovate" />
+        <img src="img/renovater.png" alt="Renovate" />
         <h3>RENOVATE</h3>
         <p>Let’s do this! Our team brings your dream to life. We use construction-dust management equipment to keep your space clean during the renovation.</p>
       </div>
